--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -57,14 +57,25 @@
 .flex-col-5 {
   @apply flex flex-col gap-5;
 }
+.flex-col-10{
+  @apply flex flex-col gap-10;
+}
+
+.flex-col-20 {
+  @apply flex flex-col gap-20;
+}
+
+.flex-col-56 {
+  @apply flex flex-col gap-56;
+}
 
 
 .max-w-wrapper {
-  @apply max-w-7xl mx-auto px-5;
+  @apply max-w-7xl mx-auto px-5 relative;
 }
 
 .max-w-wrapper-lg {
-  @apply max-w-[105rem] mx-auto px-5;
+  @apply max-w-[105rem] mx-auto px-5 relative;
 }
 
 
@@ -80,6 +91,7 @@
   min-height: 100vh;
   z-index: 100000;
   transition: .4s;
+  z-index: 1000000000;
 }
 
 .sidebar.active{
