--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -1,3 +1,12 @@
+.grid-2{
+  @apply grid grid-cols-1 lg:grid-cols-2
+}
+
+.grid-3{
+  @apply grid grid-cols-1  md:grid-cols-2 lg:grid-cols-3
+}
+
+
 .flex-center {
   @apply flex justify-center items-center;
 }
@@ -78,7 +87,28 @@
   @apply max-w-[105rem] mx-auto px-5 relative;
 }
 
+.input-container{
+  @apply relative
+}
 
+.input-container input{
+  @apply text-base text-stone-400 border-b bg-transparent border-neutral-300 transition-all dark:border-neutral-800 outline-none w-full p-4
+}
+
+.input-container input:focus,
+.input-container input:valid{
+  @apply border border-neutral-300 dark:border-neutral-800 rounded-sm transition-all
+}
+
+.input-container label{
+  @apply top-[29%] left-[5%] absolute text-stone-400 transition-all
+}
+
+.input-container input:focus ~ label,
+.input-container input:valid ~ label {
+  transition: 0.4s;
+  transform: translateY(-25px);
+}
 
 .sidebar{
   top: 0;
