--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,8 +10,69 @@
   --mainDarkBorderColor: #262626;
 }
 
+/* @layer base {
+  :root {
+    --background: 180 100% 97%;
+    --foreground: 180 100% 10%;
+    --card: 180 100% 95%;
+    --card-foreground: 180 100% 10%;
+    --popover: 180 100% 95%;
+    --popover-foreground: 180 100% 10%;
+    --primary: 180 100% 25%;
+    --primary-foreground: 180 100% 95%;
+    --secondary: 180 50% 85%;
+    --secondary-foreground: 180 100% 10%;
+    --muted: 180 50% 85%;
+    --muted-foreground: 180 20% 50%;
+    --accent: 180 50% 85%;
+    --accent-foreground: 180 100% 10%;
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: 0 0% 98%;
+    --border: 180 20% 75%;
+    --input: 180 20% 75%;
+    --ring: 180 100% 25%;
+    --radius: 0.75rem;
+    --chart-1: 180 100% 40%;
+    --chart-2: 180 80% 35%;
+    --chart-3: 180 60% 30%;
+    --chart-4: 180 100% 50%;
+    --chart-5: 180 100% 60%;
+  }
+
+  .dark {
+    --background: 180 100% 10%;
+    --foreground: 180 100% 90%;
+    --card: 180 100% 15%;
+    --card-foreground: 180 100% 90%;
+    --popover: 180 100% 15%;
+    --popover-foreground: 180 100% 90%;
+    --primary: 180 100% 25%;
+    --primary-foreground: 180 100% 90%;
+    --secondary: 180 50% 20%;
+    --secondary-foreground: 180 100% 90%;
+    --muted: 180 50% 15%;
+    --muted-foreground: 180 100% 70%;
+    --accent: 180 100% 15%;
+    --accent-foreground: 180 100% 90%;
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: 0 85.7% 97.3%;
+    --border: 180 50% 20%;
+    --input: 180 50% 20%;
+    --ring: 180 100% 25%;
+    --chart-1: 180 100% 40%;
+    --chart-2: 180 80% 35%;
+    --chart-3: 180 60% 30%;
+    --chart-4: 180 100% 50%;
+    --chart-5: 180 100% 60%;
+  }
+} */
 @layer base {
   :root {
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
     --background: 0 0% 100%;
     --foreground: 0 0% 3.9%;
     --card: 0 0% 100%;
@@ -32,11 +93,11 @@
     --input: 0 0% 89.8%;
     --ring: 0 0% 3.9%;
     --radius: 0.5rem;
-    --chart-1: 12 76% 61%;
-    --chart-2: 173 58% 39%;
-    --chart-3: 197 37% 24%;
-    --chart-4: 43 74% 66%;
-    --chart-5: 27 87% 67%;
+    --chart-1: 180 100% 40%;
+    --chart-2: 180 80% 35%;
+    --chart-3: 180 60% 30%;
+    --chart-4: 180 100% 50%;
+    --chart-5: 180 100% 60%;
   }
 
   .dark {
@@ -59,11 +120,11 @@
     --border: 0 0% 14.9%;
     --input: 0 0% 14.9%;
     --ring: 0 0% 83.1%;
-    --chart-1: 220 70% 50%;
-    --chart-2: 160 60% 45%;
-    --chart-3: 30 80% 55%;
-    --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%;
+    --chart-1: 180 100% 40%;
+    --chart-2: 180 80% 35%;
+    --chart-3: 180 60% 30%;
+    --chart-4: 180 100% 50%;
+    --chart-5: 180 100% 60%;
   }
 }
 
