additonal things added

--- a/src/styles/customStyles.css
+++ b/src/styles/customStyles.css
@@ -78,6 +78,9 @@
   @apply flex flex-col gap-56;
 }
 
+.shadcn-icon-button{
+  @apply w-full lg:w-max gap-2 disabled:cursor-not-allowed
+}
 
 .max-w-wrapper {
   @apply max-w-7xl mx-auto px-5 relative;
@@ -86,8 +89,9 @@
 .max-w-wrapper-lg {
   @apply max-w-[105rem] mx-auto px-5 relative;
 }
+
 .input{
-  @apply bg-neutral-100 dark:bg-neutral-900 outline-none p-2 text-stone-400 text-sm placeholder:text-stone-400 placeholder:text-sm rounded-md box-border 
+  @apply ring-1 ring-neutral-300 dark:ring-neutral-800 bg-neutral-100 dark:bg-neutral-900 outline-none p-2 text-stone-400 text-sm placeholder:text-stone-400 placeholder:text-sm rounded-md box-border 
 }
 
 .input-container{
@@ -145,4 +149,11 @@
   -webkit-text-fill-color: transparent;
   background-clip: text;
   text-fill-color: transparent;
+}
+.Toastify__toast {
+  @apply dark:bg-neutral-900 bg-neutral-300
+
+}
+.Toastify__toast-body {
+  @apply text-stone-400 text-sm dark:bg-neutral-900
 }
